bdr.BDR.scala.error
Erreur de compilation :
BDR:5: error: not found: value doite
    doite()
    ^BDR:26: error: not found: value recume
    recume()
    ^