bdr.BDR.scala.code
var balise= false
while (estSurMessage() && !balise){
  var message= litMessage()
  if (message =="R"){
    doite()
  } else if (message =="L"){
    gauche()
  } else if (message =="I"){
    gauche()
    gauche()
  } else if (message=="A"){
    avance()
  } else if (message=="B"){
    avance()
    avance()
  } else if (message=="C"){
    avance()
    avance()
    avance()
  } else if (message== "Z"){
    recule()
  } else if (message== "Y"){
    recule()
    recule()
  } else if (message== "X"){
    recume()
    recule()
    recule()
  } else {
    balise=true
  }}